==> Stapimaz/cs_p1/GD32VW55X_Wifi_BLE_SDK/GD32VW55x_RELEASE_V1.0.2/MSDK/cloud/tuya/tuyaos_adapter/src/tkl_gpio.c <==
#include "gd32vw55x_gpio.h"
#include "gd32vw55x_rcu.h"
#include "tkl_gpio.h"
#include "tuya_error_code.h"

OPERATE_RET tkl_gpio_init(TUYA_GPIO_NUM_E pin_id, CONST TUYA_GPIO_BASE_CFG_T *cfg)
{
    // --- BEGIN: user implements ---
    struct gpio_port port;

    if (pin_id_2_gpio_port(pin_id, &port))
        return OPRT_INVALID_PARM;

    switch (port.gpio_group)
    {
    case GPIOA:
        rcu_periph_clock_enable(RCU_GPIOA);
        break;
    case GPIOB:
        rcu_periph_clock_enable(RCU_GPIOB);
        break;
    case GPIOC:
        rcu_periph_clock_enable(RCU_GPIOC);
        break;
    default:
        break;
    }

    switch (cfg->mode) {
    case TUYA_GPIO_PULLUP:            // for input
        gpio_mode_set(port.gpio_group, GPIO_MODE_INPUT, GPIO_PUPD_PULLUP, port.pin_num);
        break;
    case TUYA_GPIO_PULLDOWN:          // for input
        gpio_mode_set(port.gpio_group, GPIO_MODE_INPUT, GPIO_PUPD_PULLDOWN, port.pin_num);
        break;
    case TUYA_GPIO_FLOATING:          // for input
        gpio_mode_set(port.gpio_group, GPIO_MODE_INPUT, GPIO_PUPD_NONE, port.pin_num);
        break;
    case TUYA_GPIO_PUSH_PULL:         // for output
        gpio_mode_set(port.gpio_group, GPIO_MODE_OUTPUT, GPIO_PUPD_NONE, port.pin_num);
        gpio_output_options_set(port.gpio_group, GPIO_OTYPE_PP, GPIO_OSPEED_25MHZ, port.pin_num);
        break;
    case TUYA_GPIO_OPENDRAIN:         // for output
        gpio_mode_set(port.gpio_group, GPIO_MODE_OUTPUT, GPIO_PUPD_NONE, port.pin_num);
        gpio_output_options_set(port.gpio_group, GPIO_OTYPE_OD, GPIO_OSPEED_25MHZ, port.pin_num);
        break;
    case TUYA_GPIO_OPENDRAIN_PULLUP:  // for output
        gpio_mode_set(port.gpio_group, GPIO_MODE_OUTPUT, GPIO_PUPD_NONE, port.pin_num);
        gpio_output_options_set(port.gpio_group, GPIO_OTYPE_OD, GPIO_OSPEED_25MHZ, port.pin_num);
        break;
    case TUYA_GPIO_HIGH_IMPEDANCE:    // for input
        gpio_mode_set(port.gpio_group, GPIO_MODE_OUTPUT, GPIO_PUPD_PULLUP, port.pin_num);
        gpio_output_options_set(port.gpio_group, GPIO_OTYPE_OD, GPIO_OSPEED_25MHZ, port.pin_num);
    default:
        return OPRT_INVALID_PARM;
    }

    return OPRT_OK;
    // --- END: user implements ---
}

OPERATE_RET tkl_gpio_deinit(TUYA_GPIO_NUM_E pin_id)
{
    // --- BEGIN: user implements ---
    if (pin_id >= TUYA_GPIO_NUM_MAX)
        return OPRT_INVALID_PARM;

    if (gpio_pin_map[pin_id].is_irq == true) {
        gpio_pin_map[pin_id].is_irq = false;
        gpio_pin_map[pin_id].args = NULL;
        gpio_pin_map[pin_id].cb = NULL;
    }

    return OPRT_OK;
    // --- END: user implements ---
}

OPERATE_RET tkl_gpio_write(TUYA_GPIO_NUM_E pin_id, TUYA_GPIO_LEVEL_E level)
{
    // --- BEGIN: user implements ---
    struct gpio_port port;

    if (pin_id_2_gpio_port(pin_id, &port))
        return OPRT_INVALID_PARM;

    gpio_bit_write(port.gpio_group, port.pin_num, (FlagStatus)level);
    return OPRT_OK;
    // --- END: user implements ---
}

OPERATE_RET tkl_gpio_read(TUYA_GPIO_NUM_E pin_id, TUYA_GPIO_LEVEL_E *level)
{
    // --- BEGIN: user implements ---
    struct gpio_port port;

    if (pin_id_2_gpio_port(pin_id, &port))
        return OPRT_INVALID_PARM;

    *level = (TUYA_GPIO_LEVEL_E)gpio_input_bit_get(port.gpio_group, port.pin_num);
    return OPRT_OK;
    // --- END: user implements ---
}

OPERATE_RET tkl_gpio_irq_init(TUYA_GPIO_NUM_E pin_id, CONST TUYA_GPIO_IRQ_T *cfg)
{
    // --- BEGIN: user implements --
    struct gpio_port port;

    if (pin_id_2_gpio_port(pin_id, &port))
        return OPRT_INVALID_PARM;

    // se t as input mode
    gpio_mode_set(port.gpio_group, GPIO_MODE_INPUT, GPIO_PUPD_PULLUP, port.pin_num);

    rcu_periph_clock_enable(RCU_SYSCFG);

    switch (port.gpio_group)
    {
    case GPIOA:
        syscfg_exti_line_config(EXTI_SOURCE_GPIOA, (31 - __CLZ(port.pin_num)));
        break;
    case GPIOB:
        syscfg_exti_line_config(EXTI_SOURCE_GPIOB, (31 - __CLZ(port.pin_num)));
        break;
    case GPIOC:
        syscfg_exti_line_config(EXTI_SOURCE_GPIOC, (31 - __CLZ(port.pin_num)));
        break;
    default:
        break;
    }

    switch (cfg->mode)
    {
    case TUYA_GPIO_IRQ_RISE:
        exti_init(gpio_pin_map[pin_id].exti_line, EXTI_INTERRUPT, EXTI_TRIG_RISING);
        break;
    case TUYA_GPIO_IRQ_FALL:
        exti_init(gpio_pin_map[pin_id].exti_line, EXTI_INTERRUPT, EXTI_TRIG_FALLING);
        break;
    case TUYA_GPIO_IRQ_RISE_FALL:
        exti_init(gpio_pin_map[pin_id].exti_line, EXTI_INTERRUPT, EXTI_TRIG_BOTH);
        break;
    case TUYA_GPIO_IRQ_LOW:
    case TUYA_GPIO_IRQ_HIGH:
    default:
        return OPRT_INVALID_PARM;
    }

    gpio_pin_map[pin_id].args = cfg->arg;
    gpio_pin_map[pin_id].cb = cfg->cb;
    gpio_pin_map[pin_id].is_irq = true;

    return OPRT_OK;
    // --- END: user implements ---
}

OPERATE_RET tkl_gpio_irq_enable(TUYA_GPIO_NUM_E pin_id)
{
    // --- BEGIN: user implements ---
    if (pin_id >= TUYA_GPIO_NUM_MAX)
        return OPRT_INVALID_PARM;

    if (gpio_pin_map[pin_id].is_irq == false)
        return OPRT_INVALID_PARM;

    switch (gpio_pin_map[pin_id].exti_line)
    {
    case EXTI_0:
        eclic_irq_enable(EXTI0_IRQn, 8, 0);
        break;
    case EXTI_1:
        eclic_irq_enable(EXTI1_IRQn, 8, 0);
        break;
    case EXTI_2:
        eclic_irq_enable(EXTI2_IRQn, 8, 0);
        break;
    case EXTI_3:
        eclic_irq_enable(EXTI3_IRQn, 8, 0);
        break;
    case EXTI_4:
        eclic_irq_enable(EXTI4_IRQn, 8, 0);
        break;
    case EXTI_5 ... EXTI_9:
        eclic_irq_enable(EXTI5_9_IRQn, 8, 0);
        break;
    case EXTI_10 ... EXTI_15:
        eclic_irq_enable(EXTI10_15_IRQn, 8, 0);
        break;
    default:
        return OPRT_INVALID_PARM;
    }

    exti_interrupt_flag_clear(gpio_pin_map[pin_id].exti_line);

    return OPRT_OK;
    // --- END: user implements ---
}

OPERATE_RET tkl_gpio_irq_disable(TUYA_GPIO_NUM_E pin_id)
{
    // --- BEGIN: user implements ---
    if (pin_id >= TUYA_GPIO_NUM_MAX)
        return OPRT_INVALID_PARM;

    switch (gpio_pin_map[pin_id].exti_line)
    {
    case EXTI_0:
        eclic_irq_disable(EXTI0_IRQn);
        break;
    case EXTI_1:
        eclic_irq_disable(EXTI1_IRQn);
        break;
    case EXTI_2:
        eclic_irq_disable(EXTI2_IRQn);
        break;
    case EXTI_3:
        eclic_irq_disable(EXTI3_IRQn);
        break;
    case EXTI_4:
        eclic_irq_disable(EXTI4_IRQn);
        break;
    case EXTI_5 ... EXTI_9:
        eclic_irq_disable(EXTI5_9_IRQn);
        break;
    case EXTI_10 ... EXTI_15:
        eclic_irq_disable(EXTI10_15_IRQn);
        break;
    }

    return OPRT_OK;
    // --- END: user implements ---
}
